--- a/public/video-ui/styles/layout/_icons.scss
+++ b/public/video-ui/styles/layout/_icons.scss
@@ -1,8 +1,6 @@
 .icon {
     font-family: 'Material Icons';
-    font-weight: normal;
     font-style: normal;
-    font-size: $iconSize;
     display: inline-block;
     width: 1em;
     height: 1em;
@@ -38,6 +36,7 @@
   background-color: $color600Grey;
   width: 33px;
   height: 33px;
+  font-size: $iconSize;
   cursor: pointer;
   display:flex;
   justify-content:center;
@@ -74,12 +73,12 @@
   border-radius: 50%;
   width: 30px;
   height: 30px;
-  font-size: 26px;
+  font-size: 24px;
   cursor: pointer;
   display:flex;
   justify-content:center;
   align-items: center;
-  margin: 10px;
+  margin: 10px 20px 10px 10px;
 
   &:hover {
     background-color: darken($brandColor, 10%);
@@ -88,6 +87,7 @@
 
 .icon__done {
   background-color: $brandColor;
+  font-size: $iconSize;
   color: $color800Grey;
   &:hover {
     background-color: darken($brandColor, 5%);
